--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="button1">Button</string>
+    <string name="button">button</string>
 </resources>
